# calculator

./: Cargo.toml  README.md  index.html
.github/workflows/: publish.yml  rust.yml
src/: calculator.rs  main.rs
ui/: Button.slint  app-window.slint  app.slint  styles.slint
